--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,26 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-input[type='text'],
-input[type='number'],
+/* input[type="color"],
+input[type="date"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="email"],
+input[type="month"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="time"],
+input[type="url"],
+input[type="week"],
+select:focus, */
+.ant-input-number-input,
+.ant-input,
+.ant-picker-input,
 textarea {
-  font-size: 16px;
+  font-size: 16px !important;
 }
 
 code {
