--- a/src/mainApp/components/AntSelectCustomStyle.css
+++ b/src/mainApp/components/AntSelectCustomStyle.css
@@ -1,4 +1,4 @@
-.ant-select {
+/* .ant-select {
   width: 220px;
   border: 2px solid #1579e9;
   border-radius: 5px;
@@ -12,3 +12,4 @@
 .ant-select-arrow {
   color: black !important;
 }
+ */
